@@ -5,14 +5,14 @@
  <!--  Define a special Reactor for single-threaded configurations.  Refer -->
  <!--  to README for details.   -->
  <dynamic id="Resource_Factory" type="Service_Object">
-   <initializer path="./Time_Date" init="_make_My_Resource_Factory"/>
+   <initializer path="Time_Date" init="_make_My_Resource_Factory"/>
  </dynamic>
  <!--  Dynamically configure the ORB into the application process. -->
  <dynamic id="ORB" type="Service_Object">
-   <initializer path="./Time_Date" init="_make_DLL_ORB" params="dummy"/>
+   <initializer path="Time_Date" init="_make_DLL_ORB" params="dummy"/>
  </dynamic>
  <!--  Once the ORB is configured, dynamically configure the Time_Date service. -->
  <dynamic id="Time_Date_Servant" type="Service_Object">
-   <initializer path="./Time_Date" init="_make_Time_Date_Servant" params="dummy -n ORB -o ior"/>
+   <initializer path="Time_Date" init="_make_Time_Date_Servant" params="dummy -n ORB -o ior"/>
  </dynamic>
 </ACE_Svc_Conf>
