@@ -1,3 +1,8 @@
+Thu Dec 28 12:52:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/Simple/time-date/svc.conf.xml:
+          Updated this file to match the regular svc.conf file
+
 Thu Dec 28 12:50:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * performance-tests/CSD_Strategy/TestApps/csd_pt_testapps.mpc:
